--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -30,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/Date" />
 
-            <TextView
+            <EditText
                 android:id="@+id/item_layout_date2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -75,22 +75,19 @@
                 android:id="@+id/item_layout_date2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.23"
-                android:text="@string/DATE_TIME"
-                android:textSize="16sp" />
+                android:text="@string/DATE_TIME" />
 
             <TextView
                 android:id="@+id/item_layout_2currency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/twocurrency"
-                android:textSize="16sp" />
+                android:text="@string/twocurrency" />
 
             <TextView
                 android:id="@+id/item_layout_sum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.36"
+                android:layout_weight="0.35"
                 android:text="@string/sum"
                 android:textSize="16sp" />
 
@@ -98,7 +95,6 @@
                 android:id="@+id/item_layout_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.16"
                 android:text="@string/twocourse"
                 android:textSize="16sp" />
 
