--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -19,35 +19,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/layout_item_fromcurrency"
             android:layout_toStartOf="@+id/layout_item_fromcurrency"
             android:text="@+id/layout_item_datecurency"
             android:textSize="16sp" />
-
-        <TextView
-            android:id="@+id/layout_item_fromcurrency"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignLeft="@+id/layout_item_from"
-            android:layout_alignParentTop="true"
-            android:layout_alignStart="@+id/layout_item_from"
-            android:text="$"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="18dp"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/layout_item_from"
-            android:layout_width="100dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="100k"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="18dp"
-            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_toUAH"
@@ -70,6 +44,34 @@
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/layout_item_toUAH"
             android:layout_toStartOf="@+id/layout_item_toUAH"
+            android:text="$"
+            android:textAlignment="center"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="18dp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/layout_item_from"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="100k"
+            android:textAlignment="center"
+            android:textColor="@android:color/darker_gray"
+            android:textSize="18dp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/layout_item_fromcurrency"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBaseline="@+id/layout_item_datecurency"
+            android:layout_alignBottom="@+id/layout_item_datecurency"
+            android:layout_alignEnd="@+id/layout_item_from"
+            android:layout_alignRight="@+id/layout_item_from"
+            android:layout_marginEnd="87dp"
+            android:layout_marginRight="87dp"
             android:text="$"
             android:textAlignment="center"
             android:textColor="@android:color/darker_gray"
