--- a/app/src/main/res/layout-land/activity_new_operation.xml
+++ b/app/src/main/res/layout-land/activity_new_operation.xml
@@ -46,20 +46,22 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginRight="390dp"
-                android:layout_marginEnd="390dp" />
+                android:layout_marginEnd="390dp"
+                android:minHeight="47dp" />
 
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:width="70dp"
+                android:width="50dp"
                 android:contextClickable="true"
                 android:gravity="right|start"
                 android:layout_alignParentTop="true"
                 android:layout_toLeftOf="@+id/spinner"
                 android:layout_toStartOf="@+id/spinner"
                 android:layout_marginRight="134dp"
-                android:layout_marginEnd="134dp" />
+                android:layout_marginEnd="134dp"
+                android:minHeight="47dp" />
 
 
         </RelativeLayout>
@@ -158,10 +160,10 @@
                     android:layout_width="157dp"
                     android:layout_height="98dp"
                     android:background="@drawable/edittextstyle"
-                    android:ems="10"
-                    android:inputType="textPersonName"
+
                     android:text="44 1 ваш текс 1"
-                    android:layout_weight="0.30" />
+                    android:layout_weight="0.30"
+                    />
 
                 <Button
                     android:id="@+id/Save"
