--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -133,6 +133,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_centerVertical="true"
+
                 android:text="Коментарии" />
         </RelativeLayout>
 
@@ -153,8 +154,7 @@
                     android:layout_width="157dp"
                     android:layout_height="98dp"
                     android:background="@drawable/edittextstyle"
-                    android:ems="10"
-                    android:inputType="textPersonName"
+                    android:inputType="textMultiLine"
                     android:text="44 1 ваш текс 1" />
 
                 <Button
@@ -178,7 +178,6 @@
                 android:layout_centerHorizontal="true"
                 android:text="@string/Back" />
         </RelativeLayout>
-
 
     </LinearLayout>
 
