--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -168,15 +168,35 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="96dp">
+            android:layout_height="140dp">
 
             <Button
                 android:id="@+id/button"
                 android:layout_width="157dp"
                 android:layout_height="50dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_centerHorizontal="true"
                 android:text="@string/Back" />
+
+            <Button
+                android:id="@+id/new_operation_sync_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/button"
+                android:layout_centerHorizontal="true"
+                android:text="SYNC" />
+
+            <TextView
+                android:id="@+id/new_operation_sync_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/new_operation_sync_button"
+                android:layout_centerHorizontal="true"
+                android:text="TextView"
+                tools:text="No Sync Yet" />
         </RelativeLayout>
 
     </LinearLayout>
