--- a/app/src/main/res/layout-land/activity_new_operation.xml
+++ b/app/src/main/res/layout-land/activity_new_operation.xml
@@ -87,13 +87,15 @@
             <EditText
 
                 android:id="@+id/amountValue"
-                android:layout_width="wrap_content"
+                android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/amountText"
                 android:layout_toRightOf="@+id/amountText"
                 android:inputType="numberDecimal"
-                android:text="12345" />
+                android:maxLength="9"
+                android:text="12345"
+                android:textAlignment="viewEnd" />
 
         </RelativeLayout>
 
@@ -115,13 +117,15 @@
             <EditText
 
                 android:id="@+id/amountUAH"
-                android:layout_width="wrap_content"
+                android:layout_width="115dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/textView2"
                 android:layout_toRightOf="@+id/textView2"
                 android:inputType="numberDecimal"
-                android:text="12345" />
+                android:maxLength="9"
+                android:text="12345"
+                android:textAlignment="viewEnd" />
 
         </RelativeLayout>
 
