--- a/app/src/main/res/layout/activity_new_operation.xml
+++ b/app/src/main/res/layout/activity_new_operation.xml
@@ -57,12 +57,14 @@
             <EditText
 
                 android:id="@+id/amountValue"
-                android:layout_width="wrap_content"
+                android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:layout_toRightOf="@+id/amountText"
                 android:inputType="numberDecimal"
-                android:text="12345" />
+                android:maxLength="9"
+                android:text="12345"
+                android:textAlignment="viewEnd" />
 
             <TextView
                 android:id="@+id/amountText"
@@ -108,13 +110,15 @@
             <EditText
 
                 android:id="@+id/amountUAH"
-                android:layout_width="wrap_content"
+                android:layout_width="95dp"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@+id/textView2"
                 android:layout_toRightOf="@+id/textView2"
                 android:inputType="numberDecimal"
-                android:text="12345" />
+                android:maxLength="9"
+                android:text="5"
+                android:textAlignment="viewEnd" />
 
         </RelativeLayout>
 
