--- a/app/src/main/res/layout/activity_youroperation.xml
+++ b/app/src/main/res/layout/activity_youroperation.xml
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -77,8 +77,9 @@
 
         <TextView
             android:id="@+id/youroperation_from_value"
-            android:layout_width="98dp"
+            android:layout_width="115dp"
             android:layout_height="match_parent"
+            android:maxLength="9"
             android:text="1234578.6"
             android:textSize="24sp" />
 
@@ -86,8 +87,10 @@
             android:id="@+id/youroperation_from_value_currency"
             android:layout_width="91dp"
             android:layout_height="35dp"
+            android:layout_marginLeft="10dp"
             android:gravity="right"
             android:text="@string/currency"
+            android:textAlignment="viewStart"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -97,7 +100,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="130dp"
         android:orientation="horizontal"
         android:weightSum="1">
 
@@ -111,8 +114,9 @@
 
         <TextView
             android:id="@+id/youroperation_to_UAH"
-            android:layout_width="98dp"
+            android:layout_width="115dp"
             android:layout_height="match_parent"
+            android:maxLength="9"
             android:text="12345678.6"
             android:textSize="24sp" />
 
@@ -140,6 +144,7 @@
             android:layout_width="98dp"
             android:layout_height="match_parent"
             android:layout_weight="0.03"
+
             android:text="12345.6"
             android:textSize="24sp" />
 
