--- a/app/src/main/res/layout-land/activity_list_operations.xml
+++ b/app/src/main/res/layout-land/activity_list_operations.xml
@@ -33,7 +33,7 @@
 
             <EditText
                 android:id="@+id/item_layout_date3"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:text="12 ltrf,hz 2016" />
 
