--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -32,7 +32,7 @@
 
             <EditText
                 android:id="@+id/item_layout_date3"
-                android:layout_width="wrap_content"
+                android:layout_width="120dp"
                 android:layout_height="wrap_content"
                 android:calendarViewShown="false"
                 android:spinnersShown="false"
