--- a/app/src/main/res/layout-land/activity_list_operations.xml
+++ b/app/src/main/res/layout-land/activity_list_operations.xml
@@ -29,13 +29,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/Date"
-                android:textSize="24sp" />
+                android:textAlignment="viewEnd"
+                android:textSize="30sp" />
 
             <EditText
                 android:id="@+id/item_layout_date3"
-                android:layout_width="150dp"
+                android:layout_width="110dp"
                 android:layout_height="wrap_content"
-                android:text="12 ltrf,hz 2016" />
+                android:layout_weight="0.18"
+                android:text="12 ltrf,hz 2016"
+                android:textSize="30sp" />
 
             <Spinner
 
@@ -55,7 +58,7 @@
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/amountValue"
                 android:layout_alignBottom="@+id/amountValue"
                 android:layout_toEndOf="@+id/amountValue"
@@ -67,7 +70,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:weightSum="1">
 
@@ -75,7 +78,6 @@
                 android:id="@+id/item_layout_date2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.11"
                 android:text="@string/DATE_TIME"
                 android:textSize="30sp" />
 
@@ -85,45 +87,37 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.07"
                 android:text="@string/twocurrency"
+                android:textAlignment="viewEnd"
                 android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/item_layout_sum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.28"
+                android:layout_weight="0.12"
                 android:text="@string/sum"
+                android:textAlignment="viewEnd"
                 android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/item_layout_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.21"
+                android:layout_weight="0.27"
                 android:text="@string/twocourse"
+                android:textAlignment="viewEnd"
                 android:textSize="30sp" />
 
             <TextView
                 android:id="@+id/item_layout_UAH"
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.09"
+                android:layout_weight="0.29"
                 android:text="@string/UAH"
+                android:textAlignment="viewEnd"
                 android:textSize="30sp" />
         </LinearLayout>
     </LinearLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/OperationsList"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="83dp"
-        android:orientation="vertical">
-
-    </android.support.v7.widget.RecyclerView>
 
     <Button
         android:id="@+id/button4"
@@ -132,5 +126,17 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="@string/Back" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/OperationsList"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/button4"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="95dp"
+        android:orientation="vertical">
+
+    </android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
