--- a/app/src/main/res/layout-land/item_layout.xml
+++ b/app/src/main/res/layout-land/item_layout.xml
@@ -13,81 +13,77 @@
         android:id="@+id/layout_item_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true">
 
 
         <TextView
             android:id="@+id/layout_item_datecurency"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@+id/layout_item_datecurency"
-            android:textSize="24sp"
             android:layout_alignBaseline="@+id/layout_item_tocurency"
             android:layout_alignBottom="@+id/layout_item_tocurency"
-            tools:text="ser34sdr234"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:text="@+id/layout_item_datecurency"
+            android:textSize="24sp"
+            tools:text="ser34sdr234" />
 
         <TextView
             android:id="@+id/layout_item_toUAH"
             android:layout_width="100dp"
             android:layout_height="30dp"
-            android:text="100k"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textStyle="italic"
-            android:layout_marginRight="184dp"
-            android:layout_marginEnd="184dp"
             android:layout_alignBaseline="@+id/layout_item_from"
             android:layout_alignBottom="@+id/layout_item_from"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:textSize="24dp" />
+            android:layout_alignParentRight="true"
+            android:layout_marginEnd="184dp"
+            android:layout_marginRight="184dp"
+            android:text="100k"
+            android:textAlignment="viewEnd"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_fromcurrency"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:text="$"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textStyle="italic"
+            android:layout_alignTop="@+id/layout_item_datecurency"
             android:layout_marginLeft="72dp"
             android:layout_marginStart="72dp"
-            android:layout_alignTop="@+id/layout_item_datecurency"
-            android:layout_toRightOf="@+id/layout_item_datecurency"
             android:layout_toEndOf="@+id/layout_item_datecurency"
-            android:textSize="24dp" />
+            android:layout_toRightOf="@+id/layout_item_datecurency"
+            android:text="$"
+            android:textAlignment="viewEnd"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_from"
             android:layout_width="100dp"
             android:layout_height="30dp"
-            android:text="100k"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textStyle="italic"
-            android:layout_marginLeft="126dp"
-            android:layout_marginStart="126dp"
             android:layout_alignBaseline="@+id/layout_item_fromcurrency"
             android:layout_alignBottom="@+id/layout_item_fromcurrency"
-            android:layout_toRightOf="@+id/layout_item_fromcurrency"
+            android:layout_marginLeft="126dp"
+            android:layout_marginStart="126dp"
             android:layout_toEndOf="@+id/layout_item_fromcurrency"
-            android:textSize="24dp" />
+            android:layout_toRightOf="@+id/layout_item_fromcurrency"
+            android:text="100k"
+            android:textAlignment="center"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_tocurency"
+            android:layout_width="70dp"
             android:layout_height="30dp"
+            android:layout_marginEnd="154dp"
+            android:layout_marginRight="154dp"
+            android:layout_toLeftOf="@+id/layout_item_toUAH"
             android:text="$"
             android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textStyle="italic"
-            android:layout_toLeftOf="@+id/layout_item_toUAH"
-            android:layout_marginRight="154dp"
-            android:layout_marginEnd="154dp"
-            android:layout_width="70dp"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
     </RelativeLayout>
 </RelativeLayout>
