--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -28,7 +28,8 @@
                 android:id="@+id/item_layout_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/Date" />
+                android:text="@string/Date"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/item_layout_date3"
@@ -78,14 +79,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.14"
-                android:text="@string/DATE_TIME" />
+                android:text="@string/DATE_TIME"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/item_layout_2currency"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/twocurrency"
-                android:textSize="12sp" />
+                android:textAlignment="viewEnd"
+                android:textSize="14sp" />
 
             <TextView
                 android:id="@+id/item_layout_sum"
@@ -93,9 +96,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="0.30"
-                android:text="@string/sum"
-                android:textAlignment="viewStart"
-                android:textSize="16sp" />
+                android:text="@string/sum" />
 
             <TextView
                 android:id="@+id/item_layout_course"
@@ -103,6 +104,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="0.20"
                 android:text="@string/twocourse"
+                android:textAlignment="viewEnd"
                 android:textSize="14sp" />
 
             <TextView
