--- a/app/src/main/res/layout/activity_list_operations.xml
+++ b/app/src/main/res/layout/activity_list_operations.xml
@@ -78,7 +78,7 @@
                 android:id="@+id/item_layout_date_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.14"
+                android:layout_weight="0.11"
                 android:text="@string/DATE_TIME"
                 android:textSize="14sp" />
 
@@ -96,13 +96,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="0.30"
-                android:text="@string/sum" />
+                android:text="@string/sum"
+                android:textAlignment="viewEnd" />
 
             <TextView
                 android:id="@+id/item_layout_course"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.20"
+                android:layout_weight="0.26"
                 android:text="@string/twocourse"
                 android:textAlignment="viewEnd"
                 android:textSize="14sp" />
@@ -111,6 +112,7 @@
                 android:id="@+id/item_layout_UAH"
                 android:layout_width="48dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="0.20"
                 android:text="@string/UAH"
                 android:textAlignment="viewEnd" />
         </LinearLayout>
@@ -120,10 +122,10 @@
         android:id="@+id/OperationsList"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="83dp"
+        android:layout_marginTop="60dp"
         android:orientation="vertical">
 
     </android.support.v7.widget.RecyclerView>
