--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -16,10 +16,11 @@
 
         <TextView
             android:id="@+id/layout_item_datecurency"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_toStartOf="@+id/layout_item_fromcurrency"
             android:text="@+id/layout_item_datecurency"
             android:textSize="14sp" />
 
@@ -32,22 +33,8 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:text="100k"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14dp"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/layout_item_tocurency"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentTop="true"
-            android:layout_toLeftOf="@+id/layout_item_toUAH"
-            android:layout_toStartOf="@+id/layout_item_toUAH"
-            android:text="$"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14dp"
+            android:textAlignment="viewEnd"
+            android:textSize="14sp"
             android:textStyle="italic" />
 
         <TextView
@@ -57,25 +44,34 @@
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:text="100k"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14dp"
+            android:textAlignment="viewEnd"
+            android:textSize="14sp"
             android:textStyle="italic" />
 
         <TextView
             android:id="@+id/layout_item_fromcurrency"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_alignBaseline="@+id/layout_item_datecurency"
-            android:layout_alignBottom="@+id/layout_item_datecurency"
-            android:layout_alignEnd="@+id/layout_item_from"
-            android:layout_alignRight="@+id/layout_item_from"
-            android:layout_marginEnd="87dp"
-            android:layout_marginRight="87dp"
+            android:layout_alignParentTop="true"
+            android:layout_toLeftOf="@+id/layout_item_from"
+            android:layout_toStartOf="@+id/layout_item_from"
             android:text="$"
             android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14dp"
+            android:textSize="14sp"
+            android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/layout_item_tocurency"
+            android:layout_width="60dp"
+            android:layout_height="30dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="73dp"
+            android:layout_marginRight="73dp"
+            android:text="$"
+            android:textAlignment="viewEnd"
+            android:textSize="14sp"
             android:textStyle="italic" />
 
     </RelativeLayout>
