--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -27,4 +27,16 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:text="@string/WelcomeText" />
+
+    <Button
+        android:id="@+id/Exit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/button"
+        android:layout_marginLeft="156dp"
+        android:layout_marginStart="156dp"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_toRightOf="@+id/textView"
+        android:onClick="onclick"
+        android:text="@string/exit" />
 </RelativeLayout>
