--- a/app/src/main/res/layout-land/activity_list_operations.xml
+++ b/app/src/main/res/layout-land/activity_list_operations.xml
@@ -66,6 +66,18 @@
                 android:width="50dp"
                 android:contextClickable="true" />
 
+            <Spinner
+                android:id="@+id/spinner3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/amountValue"
+                android:layout_alignBottom="@+id/amountValue"
+                android:layout_toEndOf="@+id/amountValue"
+                android:layout_toRightOf="@+id/amountValue"
+                android:width="50dp"
+                android:contextClickable="true" />
+
+
         </LinearLayout>
 
         <LinearLayout
