--- a/app/src/main/res/layout-land/activity_list_operations.xml
+++ b/app/src/main/res/layout-land/activity_list_operations.xml
@@ -72,6 +72,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignBaseline="@+id/amountValue"
                 android:layout_alignBottom="@+id/amountValue"
+                android:layout_marginLeft="40dp"
                 android:layout_toEndOf="@+id/amountValue"
                 android:layout_toRightOf="@+id/amountValue"
                 android:width="50dp"
